unit tests and bulk final